# intention-dev

./: .gitignore  pyproject.toml
imaro/: __init__.py  cli.py  config.py  orchestrator.py
imaro/execution/: base.py  claude_code.py  context_manager.py  gemini_executor.py
imaro/intention/: document.py  refiner.py
imaro/models/: pricing.py  schemas.py  usage.py
imaro/planning/: consensus.py  milestone.py  plan_generator.py
imaro/providers/: base.py  claude_api.py  gemini_api.py
imaro/review/: review_gate.py  reviewer.py  roles.py
imaro/ui/: terminal.py
tests/: conftest.py  test_cli.py  test_config.py  test_execution.py  test_intention.py  test_orchestrator.py  test_planning.py  test_review.py  test_schemas.py  test_usage.py
