[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imaro"
version = "0.1.0"
description = "Intention-based Multi-Agent Review Orchestrator"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
imaro = "imaro.cli:app"
